--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -1,8 +1,14 @@
 .navbar {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
     background: #12000e;
     width: 60px;
     height: 100%;
-    position: absolute;
+    padding: 7px;
+
+
 
     .logo {
         display: block;
@@ -63,7 +69,7 @@
                 opacity: 0;
                 transition: all 0.3s ease-out;
                 content: '';
-                font-size: 19px;
+                font-size: 16px;
                 letter-spacing: 2px;
             }
 
@@ -111,7 +117,7 @@
                 line-height: 16px;
                 color: #793c74;
 
-                &:hover {
+                &:hover svg {
                     color: #d87dd0;
                 }
             }
