--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -8,20 +8,19 @@
     height: 100%;
     padding: 7px;
 
-
-
     .logo {
         display: block;
         padding: 8px 0;
+        opacity: .9;
 
         img {
             display: block;
             margin: 8px auto;
-            width: 24px;
+            width: 50px;
             height: auto;
 
             &.subLogo {
-                width: 50px;
+                width: 70px;
             }
         }
     }
