--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -13,14 +13,20 @@
         padding: 8px 0;
         opacity: .9;
 
+        &:hover {
+            opacity: 1;
+        }
+
         img {
             display: block;
             margin: 8px auto;
-            width: 50px;
+            width: 45px;
             height: auto;
 
             &.subLogo {
                 width: 70px;
+                margin-top: 1rem;
+
             }
         }
     }
