--- a/lees-portfolio/src/components/Layout/index.scss
+++ b/lees-portfolio/src/components/Layout/index.scss
@@ -1,8 +1,6 @@
-// .page {
-//     width: 100%;
-//     height: 100%;
-//     position: absolute;
-// }
+.page {
+    // padding: 2rem 10rem;
+}
 
 .top-tags {
     bottom: auto;
@@ -16,9 +14,24 @@
     bottom: 0;
     left: 120px;
     font-size: 18px;
-    font-family: La Belle Aurore;
+    font: 'La Belle Aurore';
 }
 
 .bottom-tag-html {
     margin-left: -20px;
+}
+
+.container {
+    width: 100%;
+    will-change: contents;
+    height: 90%;
+    min-height: 566PX;
+    position: absolute;
+    opacity: 0.9;
+    top: 5%;
+    margin: 0 auto;
+    z-index: 1;
+    transform-style: preserve-3d;
+    animation: fadeIn 1s forwards;
+    animation-delay: 1s;
 }
