--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -7,6 +7,7 @@
     width: 60px;
     height: 100%;
     padding: 7px;
+    z-index: 2;
 
     .logo {
         display: block;
@@ -22,6 +23,8 @@
             margin: 8px auto;
             width: 45px;
             height: auto;
+
+
 
             &.subLogo {
                 width: 70px;
