--- a/lees-portfolio/src/components/Home/index.scss
+++ b/lees-portfolio/src/components/Home/index.scss
@@ -6,6 +6,10 @@
         transform: translateY(-50%);
         width: 40%;
         max-width: 90%;
+
+        @media (max-width: 770px) {
+            left: 25%;
+        }
     }
 
     h1 {
@@ -13,10 +17,78 @@
         font-size: 40px;
         margin: 0;
         font: 'Coolvetica';
+        font-weight: 400;
+
+        @media (max-width: 770px) {
+            font-size: 22px;
+        }
+
+        &::before {
+            position: absolute;
+            content: '<h1>';
+            font-family: 'La Belle Aurore', cursive;
+            font-size: 18px;
+            color: #d84ecd;
+            margin-top: -40px;
+            left: 17px;
+            opacity: 0.5;
+        }
+
+        &::after {
+            content: '</h1>';
+            font-family: 'La Belle Aurore', cursive;
+            font-size: 18px;
+            color: #d84ecd;
+            margin-top: 18px;
+            margin-left: 20px;
+            opacity: 0.5;
+            position: absolute;
+            animation: fadeIn 1s 1.7s backwards;
+        }
 
         img {
-            width: 60px;
+            width: 77px;
+            margin: -6px 5px;
+            height: auto;
+            opacity: 0.7;
+            animation: fadeIn 1s linear both;
+            animation-delay: 1.4s;
 
+            @media (max-width: 770px) {
+                width: 47px;
+                margin: -4px 5px;
+            }
         }
+
+        h2 {
+            color: white;
+            margin-top: 20px;
+            font-weight: 400;
+            font-size: 11px;
+            font-family: sans-serif;
+            letter-spacing: 3px;
+            animation: fadeIn 1s 1.8s backwards;
+        }
+    }
+
+    .flat-button {
+        color: #d84ecd;
+        font-size: 13px;
+        font-weight: 400;
+        letter-spacing: 4px;
+        font-family: sans-serif;
+        text-decoration: none;
+        padding: 10px 18px;
+        border: 1px solid #d84ecd;
+        margin-top: 25px;
+        float: left;
+        animation: fadeIn 1s 1.9s backwards;
+        white-space: nowrap;
+
+        &:hover {
+            background: #d84ecd;
+            color: white;
+        }
+
     }
 }
