--- a/lees-portfolio/src/App.scss
+++ b/lees-portfolio/src/App.scss
@@ -1,6 +1,6 @@
 $primary-color: #ff6ec7;
 
-@import 'animate.css';
+@import 'animate.css/animate.css';
 
 @font-face {
   font-family: 'Helvetica Neue';
