--- a/lees-portfolio/src/components/AnimatedLetters/index.scss
+++ b/lees-portfolio/src/components/AnimatedLetters/index.scss
@@ -4,21 +4,23 @@
     animation: bounceIn 1s 1s;
     animation-fill-mode: forwards;
     min-width: 10px;
-
-    .text-animate-hover {
-        min-width: 10px;
-        display: inline-block;
-        animation-fill-mode: both;
-
-        &:hover {
-            animation: rubberBand 1s;
-            color: #d84ecd;
-        }
-    }
 }
 
 @for $i from 1 through 35 {
-    .text-animate_#{$i} {
+    .text-animate._#{$i} {
         animation-delay: #{$i / 10}s;
     }
+}
+
+
+.text-animate-hover {
+    min-width: 10px;
+    display: inline-block;
+    animation-fill-mode: both;
+
+    &:hover {
+        animation: rubberBand .7s;
+        color: #d84ecd;
+    }
+
 }
