--- a/lees-portfolio/src/components/Layout/index.scss
+++ b/lees-portfolio/src/components/Layout/index.scss
@@ -38,3 +38,26 @@ $lees-pink: #d84ecd;
     animation: fadeIn 1s forwards;
     animation-delay: 1s;
 }
+
+.about-page {
+    .text-zone {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 35%;
+        vertical-align: middle;
+        display: table-cell;
+        max-height: 90%;
+
+        h1 {
+            font-size: 53px;
+            font-family: 'Coolvetica';
+            color: $lees-pink;
+            font-weight: 400;
+            margin-top: 0;
+            position: relative;
+            margin-bottom: 40px;
+        }
+    }
+}
