--- a/lees-portfolio/src/components/Layout/index.scss
+++ b/lees-portfolio/src/components/Layout/index.scss
@@ -49,6 +49,10 @@ $lees-pink: #d84ecd;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
+        opacity: 0;
+        animation: fadeInContent 1s forwards;
+        animation-delay: 1.7s;
+
 
         h1 {
             font-size: 53px;
@@ -58,6 +62,8 @@ $lees-pink: #d84ecd;
             margin-top: 0;
             position: relative;
             margin-bottom: 40px;
+            animation-delay: 1.8s;
+
         }
 
         &::before {
@@ -85,10 +91,29 @@ $lees-pink: #d84ecd;
 
         p {
             font-size: 13px;
-            font-family: sans-serif;
             color: #dcdad0;
-            line-height: 1.5;
-            margin-bottom: 20px;
+            font-family: sans-serif;
+            font-weight: 300;
+            min-width: fit-content;
+            animation: pulse 1s forwards;
+
+            &:nth-of-type(1) {
+                animation-delay: 2.3s;
+            }
+
+            &:nth-of-type(2) {
+                animation-delay: 2.6s;
+            }
+
+            &:nth-of-type(3) {
+                animation-delay: 2.9s;
+            }
         }
+    }
+}
+
+@keyframes fadeInContent {
+    to {
+        opacity: 1;
     }
 }
