--- a/lees-portfolio/src/App.scss
+++ b/lees-portfolio/src/App.scss
@@ -1,6 +1,7 @@
 $primary-color: #ff6ec7;
 
 @import 'animate.css/animate.css';
+@import '~loaders.css/src/animations/square-spin.scss';
 
 @font-face {
   font-family: 'Helvetica Neue';
@@ -20,4 +21,17 @@ $primary-color: #ff6ec7;
 input,
 textarea {
   font-family: 'Helvetica Neue';
+}
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50vh;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
 }
