--- a/lees-portfolio/src/components/About/index.scss
+++ b/lees-portfolio/src/components/About/index.scss
@@ -7,6 +7,15 @@
     position: absolute;
     right: 0;
     overflow: hidden;
+    opacity: 0;
+    animation: fadeInContent 1s forwards;
+    animation-delay: 2s;
+}
+
+@keyframes fadeInContent {
+    to {
+        opacity: 1;
+    }
 }
 
 .cubespinner {
