--- a/lees-portfolio/src/components/Home/index.scss
+++ b/lees-portfolio/src/components/Home/index.scss
@@ -73,6 +73,7 @@ $lees-pink: #d84ecd;
 
     .flat-button {
         color: $lees-pink;
+        background-color: transparent;
         font-size: 13px;
         font-weight: 400;
         letter-spacing: 4px;
@@ -80,6 +81,7 @@ $lees-pink: #d84ecd;
         text-decoration: none;
         padding: 10px 18px;
         border: 1px solid #d84ecd;
+        border-radius: 2px;
         margin-top: 25px;
         float: left;
         opacity: 0;
