--- a/lees-portfolio/src/components/Contact/index.scss
+++ b/lees-portfolio/src/components/Contact/index.scss
@@ -1,8 +1,20 @@
 $lees-pink: #d84ecd;
 
+.contact-page {
+    padding-top: 2.8rem;
+
+
+}
+
+.text-zone {
+    min-width: 290px;
+}
+
 .contact-form {
     width: 100%;
+    min-width: 290px;
     margin-top: 20px;
+
 
     ul {
         padding: 0;
