--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -9,6 +9,23 @@
     padding: 7px;
     z-index: 2;
 
+    //moving the navbar to the top of the page
+
+    @media (max-width: 768px) {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+        flex-direction: row;
+        // justify-content: space-between;
+        // padding: 0 20px;
+        z-index: 3;
+        position: fixed;
+        background: #12000e;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        transition: all 0.3s ease-out;
+    }
+
     .logo {
         display: block;
         padding: 8px 0;
@@ -42,6 +59,17 @@
         top: 50%;
         margin-top: -120px;
         width: 100%;
+
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: row;
+            position: relative;
+            top: 0;
+            margin-top: 0;
+            height: 100%;
+            justify-content: space-around;
+            align-items: center;
+        }
 
         a {
             font-size: 22px;
@@ -129,6 +157,12 @@
                     color: #d87dd0;
                 }
             }
+        }
+    }
+
+    .view-profile {
+        @media (max-width: 768px) {
+            display: none;
         }
     }
 }
