--- a/lees-portfolio/src/components/Home/index.scss
+++ b/lees-portfolio/src/components/Home/index.scss
@@ -1,126 +1,125 @@
 $lees-pink: #d84ecd;
 
 .homePage {
-    .textZone {
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 40%;
-        max-width: 90%;
+  .textZone {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%) translateX(50%);
+    width: 40%;
+    max-width: 90%;
 
-        @media (max-width: 770px) {
-            left: 25%;
-        }
+    @media (max-width: 770px) {
+      transform: translateY(-60%) translateX(45%);
+    }
+  }
+
+  h1 {
+    color: white;
+    font-size: 40px;
+    margin: 0;
+    font: 'Coolvetica';
+    font-weight: 400;
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 1s;
+
+    @media (max-width: 770px) {
+      font-size: 20px;
     }
 
-    h1 {
-        color: white;
-        font-size: 40px;
-        margin: 0;
-        font: 'Coolvetica';
-        font-weight: 400;
-        opacity: 0;
-        animation: fadeIn 1s forwards;
-        animation-delay: 1s;
-
-        @media (max-width: 770px) {
-            font-size: 22px;
-        }
-
-        &::before {
-            position: absolute;
-            content: '<h1>';
-            font-family: 'La Belle Aurore', cursive;
-            font-size: 18px;
-            color: $lees-pink;
-            margin-top: -40px;
-            left: 3px;
-            opacity: 0.5;
-            position: absolute;
-            // animation: fadeIn 1s 1.7s backwards;
-        }
-
-        &::after {
-            content: '</h1>';
-            font-family: 'La Belle Aurore', cursive;
-            font-size: 18px;
-            color: $lees-pink;
-            margin-top: 28px;
-            margin-left: 20px;
-            opacity: 0.5;
-            position: absolute;
-            // animation: fadeIn 1s 1.7s forwards;
-
-            @media (max-width: 770px) {
-                margin-top: 12px;
-            }
-        }
+    &::before {
+      position: absolute;
+      content: '<h1>';
+      font-family: 'La Belle Aurore', cursive;
+      font-size: 18px;
+      color: $lees-pink;
+      margin-top: -40px;
+      left: 3px;
+      opacity: 0.5;
+      position: absolute;
+      // animation: fadeIn 1s 1.7s backwards;
     }
 
-    h2 {
-        color: $lees-pink;
-        margin-top: 20px;
-        font-weight: 400;
-        font-size: 12px;
-        font-family: sans-serif;
-        letter-spacing: 3px;
-        opacity: 0;
-        animation: fadeIn 1s forwards;
-        animation-delay: 1.8s;
+    &::after {
+      content: '</h1>';
+      font-family: 'La Belle Aurore', cursive;
+      font-size: 18px;
+      color: $lees-pink;
+      margin-top: 28px;
+      margin-left: 20px;
+      opacity: 0.5;
+      position: absolute;
+      // animation: fadeIn 1s 1.7s forwards;
 
+      @media (max-width: 770px) {
+        margin-top: 12px;
+      }
     }
+  }
 
-    .flat-button {
-        color: $lees-pink;
-        background-color: transparent;
-        font-size: 13px;
-        font-weight: 400;
-        letter-spacing: 4px;
-        font-family: sans-serif;
-        text-decoration: none;
-        padding: 10px 18px;
-        border: 1px solid #d84ecd;
-        border-radius: 2px;
-        margin-top: 25px;
-        float: left;
-        opacity: 0;
-        animation: fadeIn 1s forwards;
-        animation-delay: 1.9s;
-        white-space: nowrap;
+  h2 {
+    color: $lees-pink;
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 12px;
+    font-family: sans-serif;
+    letter-spacing: 3px;
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 1.8s;
+  }
 
-        &:hover {
-            background: #d84ecd;
-            color: white;
-        }
+  .flat-button {
+    color: $lees-pink;
+    background-color: transparent;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: 4px;
+    font-family: sans-serif;
+    text-decoration: none;
+    padding: 10px 18px;
+    border: 1px solid #d84ecd;
+    border-radius: 2px;
+    margin-top: 25px;
+    float: left;
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+    animation-delay: 1.9s;
+    white-space: nowrap;
+
+    &:hover {
+      background: #d84ecd;
+      color: white;
     }
+  }
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 .leeLogo {
-    width: 77px;
-    margin: -6px 5px;
-    height: auto;
-    opacity: 0.5;
-    animation: fadeIn 1s linear both;
-    animation-delay: 1s;
+  width: 77px;
+  margin: -6px 5px;
+  height: auto;
+  opacity: 0.5;
+  animation: fadeIn 1s linear both;
+  animation-delay: 1s;
 
-    &:hover {
-        transform: scale(1.1);
-        cursor: pointer;
-    }
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 
-    @media (max-width: 770px) {
-        width: 47px;
-        margin: -4px 5px;
-    }
+  @media (max-width: 770px) {
+    width: 47px;
+    margin: -4px 5px;
+  }
 }
