--- a/lees-portfolio/src/components/Home/index.scss
+++ b/lees-portfolio/src/components/Home/index.scss
@@ -11,6 +11,7 @@ $lees-pink: #d84ecd;
 
     @media (max-width: 770px) {
       transform: translateY(-60%) translateX(45%);
+      min-width: 140px;
     }
   }
 
