--- a/lees-portfolio/src/components/Sidebar/index.scss
+++ b/lees-portfolio/src/components/Sidebar/index.scss
@@ -1,168 +1,165 @@
 .navbar {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  align-items: center;
+  background: #12000e;
+  width: 60px;
+  height: 100%;
+  padding: 7px;
+  z-index: 2;
+
+  @media (max-width: 790px) {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    flex-direction: row;
+    z-index: 3;
+    position: fixed;
     background: #12000e;
-    width: 60px;
-    height: 100%;
-    padding: 7px;
-    z-index: 2;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-out;
+  }
 
-    //moving the navbar to the top of the page
+  .logo {
+    display: block;
+    padding: 8px 0;
+    opacity: 0.8;
 
-    @media (max-width: 768px) {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 60px;
-        flex-direction: row;
-        // justify-content: space-between;
-        // padding: 0 20px;
-        z-index: 3;
-        position: fixed;
-        background: #12000e;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    &:hover {
+      opacity: 1;
+    }
+
+    img {
+      display: block;
+      margin: 8px auto;
+      width: 45px;
+      height: auto;
+
+      &.subLogo {
+        width: 70px;
+        margin-top: 1rem;
+      }
+    }
+  }
+
+  nav {
+    display: block;
+    text-align: center;
+    position: absolute;
+    height: 210px;
+    top: 50%;
+    margin-top: -120px;
+    width: 100%;
+
+    @media (max-width: 790px) {
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      top: 0;
+      margin-top: 0;
+      height: 100%;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    @media (max-width: 430px) {
+      justify-content: space-evenly;
+    }
+
+    a {
+      font-size: 22px;
+      color: #4d4d4e;
+      display: block;
+      line-height: 51px;
+      height: 51px;
+      position: relative;
+      text-decoration: none;
+
+      i {
         transition: all 0.3s ease-out;
-    }
+      }
 
-    .logo {
-        display: block;
-        padding: 8px 0;
-        opacity: .8;
+      &:hover {
+        color: #d84ecd;
 
-        &:hover {
-            opacity: 1;
+        svg {
+          opacity: 0;
         }
 
-        img {
-            display: block;
-            margin: 8px auto;
-            width: 45px;
-            height: auto;
-
-
-
-            &.subLogo {
-                width: 70px;
-                margin-top: 1rem;
-
-            }
+        &:after {
+          opacity: 1;
         }
-    }
+      }
 
-    nav {
-        display: block;
-        text-align: center;
+      &:after {
         position: absolute;
-        height: 210px;
-        top: 50%;
-        margin-top: -120px;
-        width: 100%;
-
-        @media (max-width: 768px) {
-            display: flex;
-            flex-direction: row;
-            position: relative;
-            top: 0;
-            margin-top: 0;
-            height: 100%;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        a {
-            font-size: 22px;
-            color: #4d4d4e;
-            display: block;
-            line-height: 51px;
-            height: 51px;
-            position: relative;
-            text-decoration: none;
-
-            i {
-                transition: all 0.3s ease-out;
-            }
-
-            &:hover {
-                color: #d84ecd;
-
-                svg {
-                    opacity: 0;
-                }
-
-                &:after {
-                    opacity: 1;
-                }
-            }
-
-            &:after {
-                position: absolute;
-                bottom: 0;
-                display: block;
-                width: 100%;
-                text-align: center;
-                opacity: 0;
-                transition: all 0.3s ease-out;
-                content: '';
-                font-size: 16px;
-                letter-spacing: 2px;
-            }
-
-            &:first-child {
-                &::after {
-                    content: 'Home';
-                }
-            }
-        }
-
-        .about-link {
-            &:after {
-                content: 'About';
-            }
-        }
-
-        .contact-link {
-            &:after {
-                content: 'contact';
-            }
-        }
-
-        a.active {
-            svg {
-                color: #d84ecd;
-            }
-        }
-    }
-
-    ul {
-        position: absolute;
-        bottom: 20px;
-        width: 100%;
+        bottom: 0;
         display: block;
-        padding: 0;
-        list-style: none;
+        width: 100%;
         text-align: center;
-        margin: 0;
+        opacity: 0;
+        transition: all 0.3s ease-out;
+        content: '';
+        font-size: 16px;
+        letter-spacing: 2px;
+      }
 
-        li {
-            a {
-                padding: 7px 0;
-                display: block;
-                font-size: 15px;
-                line-height: 16px;
-                color: #793c74;
-
-                &:hover svg {
-                    color: #d87dd0;
-                }
-            }
+      &:first-child {
+        &::after {
+          content: 'Home';
         }
+      }
     }
 
-    .view-profile {
-        @media (max-width: 768px) {
-            display: none;
-        }
+    .about-link {
+      &:after {
+        content: 'About';
+      }
     }
+
+    .contact-link {
+      &:after {
+        content: 'contact';
+      }
+    }
+
+    a.active {
+      svg {
+        color: #d84ecd;
+      }
+    }
+  }
+
+  ul {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    margin: 0;
+
+    li {
+      a {
+        padding: 7px 0;
+        display: block;
+        font-size: 15px;
+        line-height: 16px;
+        color: #793c74;
+
+        &:hover svg {
+          color: #d87dd0;
+        }
+      }
+    }
+  }
+
+  .view-profile {
+    @media (max-width: 790px) {
+      display: none;
+    }
+  }
 }
